

Brushed up the Look and feel Plugin;
  - Updated JGoodies Looks to version 2.5.3
  - Made JGoodies Windows look and feel available (Windows only)
  - Fixed several bugs which makes more Look and feels available
  NOTE: Some Look and Feels may cause performance or even functional problems.
        If you think you are seeing such problems switch to a Metal Look and Feel.


Bug fixes:

Fixed NullPointer when "Overview / Charts" tab of a SQL result was selected with no numeric or temporal columns in result.

#1456 Oracle Plugin: Broken view source for Oracle user defined functions
  Note: This fix is related to the one of #172 but not the same.

Oracle Plugin: Parts (lines) of procedure source code could be missing
   Reading procedure source code expected a single result line only but multiple are possible.

#1455 Oracle Plugin: Show source code that fails to reformat as it comes from the database.

#1452 Derby-DB: "Create table script" and "Create data script" didn't work for columns of type boolean.

Derby Plugin: Merge Request #72: Don't shut Embedded Derby down while other sessions still active (open)
   Thanks to Stanimir Stamenkov for the patch.

#1450 java.lang.StringIndexOutOfBoundsException occurred on opening logs window.
  Thanks to Chris B for the fix.

Fixed two bugs concerning File --> Global Preference  --> tab "Data Type Controls" --> section "Timestamp (SQL type 93)":
  1. Checkbox "Always display Milliseconds in three digits" was checked by default.
  2. When this checkbox was checked the time format was 12 instead of 24 hours.

Alias import/export: When Aliases were dragged from the import window to an empty Alias tree no Aliases were imported.

When Aliases where tested they occurred multiple times in the recent Aliases list.

Code completion didn't work right when Ctrl+Space was pressed with completion list open.
  The problem occurred when tables and stored procedures names partly matched.
